@@ -1,4 +1,5 @@
 - fix display of downloaded urls with aria2 and metalinks
+- fix handling --downloader when using mirrorlist (it was forcing aria2)
 
 Version 6.8 - 4 September 2008, Pascal "Pixel" Rigaux
 
